--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>IP Address</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/jquery-2.1.3.min.js"></script>
-    <script src="js/Markdown.Converter.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/script.js"></script>
   </head>
   <body>
@@ -23,7 +22,8 @@
       <div id="close"><a href="#" class="toggleAbout">close</a></div>
       <div id="text">
         <h1>ip.vettig.se</h1>
-        <p>This is a service based on <a href="http://ipinfo.io" class="underline">ipinfo.io</a>. Feel free to use it, available at <a href="https://github.com/rcus/ip" class="underline">GitHub</a>.</p>
+        <p>This is a service based on <a href="http://ipinfo.io" class="underline">ipinfo.io</a>. Feel free to use it, available at <a href="http://github.com/rcus/ip" class="underline">GitHub</a>.</p>
+        <p>Includes <a href="http://jquery.com" class="underline">jQuery</a> 2.1.3.</p>
       </div>
     </div>
 
