--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>IP Address</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="js/script.js"></script>
   </head>
   <body>
 
-    <h1 id="header">Getting IP address...</h1>
+    <h1 id="header"></h1>
     
     <table id="iptable">
       <tr><th>Location:</th><td class="location">...</td></tr>
@@ -23,12 +23,12 @@
       <div id="text">
         <h1>ip.vettig.se</h1>
         <p>This is a service based on <a href="http://ipinfo.io" class="underline">ipinfo.io</a>. Feel free to use it, available at <a href="http://github.com/rcus/ip" class="underline">GitHub</a>.</p>
-        <p>Includes <a href="http://jquery.com" class="underline">jQuery</a> 2.1.3.</p>
+        <p>Includes <a href="http://jquery.com" class="underline">jQuery</a> 2.2.1.</p>
       </div>
     </div>
 
     <footer>
-      &copy; 2015 <a href="http://vettig.se">Marcus Törnroth</a> | <a href="#" class="toggleAbout">About</a>
+      &copy; 2016 <a href="http://rcus.se">Marcus Törnroth</a> | <a href="#" class="toggleAbout">About</a>
     </footer>
 
   </body>
