Layout done, prepared for htaccess

--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
   <body>
 
     <h1 id="header"></h1>
-    
-    <table id="iptable">
-      <tr><th>Location:</th><td class="location">...</td></tr>
-      <tr><th>Network:</th><td class="network">...</td></tr>
-      <tr><th>Hostname:</th><td class="hostname">...</td></tr>
-    </table>
+
+    <p id="info">
+      <span class="location"></span><br>
+      <span class="network"></span><br>
+      <span class="hostname"></span>
+    </p>
 
     <div id="about">
-      <div id="close"><a href="#" class="toggleAbout">close</a></div>
+      <div id="close" class="toggleAbout">&times;</div>
       <div id="text">
         <h1>ip.vettig.se</h1>
-        <p>This is a service based on <a href="http://ipinfo.io" class="underline">ipinfo.io</a>. Feel free to use it, available at <a href="http://github.com/rcus/ip" class="underline">GitHub</a>.</p>
+        <p>This is a service based on <a href="http://ipinfo.io" class="underline">ipinfo.io</a>.</p>
         <p>Includes <a href="http://jquery.com" class="underline">jQuery</a> 2.2.1.</p>
+        <p>Feel free to use it, available at <a href="http://github.com/rcus/ip" class="underline">GitHub</a>.</p>
       </div>
     </div>
 
     <footer>
-      &copy; 2016 <a href="http://rcus.se">Marcus Törnroth</a> | <a href="#" class="toggleAbout">About</a>
+      &copy; 2016 <a href="http://rcus.se">Marcus Törnroth</a> | <span class="toggleAbout">About</span>
     </footer>
 
   </body>
