--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="about">
       <div id="close" class="toggleAbout">&times;</div>
       <div id="text">
-        <h1>ip.vettig.se</h1>
+        <h1>rcus/ip</h1>
         <p>This is a service based on <a href="http://ipinfo.io" class="underline">ipinfo.io</a>.</p>
         <p>Includes <a href="http://jquery.com" class="underline">jQuery</a> 2.2.1.</p>
         <p>Feel free to use it, available at <a href="http://github.com/rcus/ip" class="underline">GitHub</a>.</p>
