--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>IP Address</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="js/script.js"></script>
   </head>
   <body>
@@ -24,7 +24,7 @@
         <h1>rcus/ip</h1>
         <p>This is a service based on <a href="http://ipinfo.io" class="underline">ipinfo.io</a>.</p>
         <p>Includes <a href="http://jquery.com" class="underline">jQuery</a> 2.2.1.</p>
-        <p>Feel free to use it, available at <a href="http://github.com/rcus/ip" class="underline">GitHub</a>.</p>
+        <p>Feel free to use it, available at <a href="http://github.com/tornroth/ip" class="underline">GitHub</a>.</p>
       </div>
     </div>
 
