Updated links to https

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <div id="close" class="toggleAbout">&times;</div>
       <div id="text">
         <h1>rcus/ip</h1>
-        <p>This is a service based on <a href="http://ipinfo.io" class="underline">ipinfo.io</a>.</p>
-        <p>Includes <a href="http://jquery.com" class="underline">jQuery</a> 2.2.1.</p>
-        <p>Feel free to use it, available at <a href="http://github.com/tornroth/ip" class="underline">GitHub</a>.</p>
+        <p>This is a service based on <a href="//ipinfo.io" class="underline">ipinfo.io</a>.</p>
+        <p>Includes <a href="//jquery.com" class="underline">jQuery</a> 2.2.1.</p>
+        <p>Feel free to use it, available at <a href="//github.com/tornroth/ip" class="underline">GitHub</a>.</p>
       </div>
     </div>
 
     <footer>
-      &copy; 2016 <a href="http://rcus.se">Marcus Törnroth</a> | <span class="toggleAbout">About</span>
+      &copy; 2017 <a href="//vettig.se">Marcus Törnroth</a> | <span class="toggleAbout">About</span>
     </footer>
 
   </body>
