--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
-    <script src="js/script.js"></script>
   </head>
   <body>
 
-    <h1 id="header"></h1>
+    <div class="top">
+      <div class="ip"></div>
+    </div>
 
-    <p id="info">
-      <span class="location"></span><br>
-      <span class="network"></span><br>
-      <span class="hostname"></span>
-    </p>
+    <div class="center">
+      <div class="location"></div>
+      <div class="network"></div>
+      <div class="hostname"></div>
+    </div>
 
-    <div id="about">
-      <div id="close" class="toggleAbout">&times;</div>
-      <div id="text">
-        <h1>rcus/ip</h1>
+    <div class="bottom">
+      <div>
+        &copy; 2017 <a href="//github.com/tornroth/ip">Marcus Törnroth</a> | <span class="link toggle-about">About</span>
+      </div>
+    </div>
+
+    <div class="about hidden">
+      <div class="content">
+        <div class="close toggle-about">&times;</div>
+        <p class="header">IP Address</p>
         <p>This is a service based on <a href="//ipinfo.io" class="underline">ipinfo.io</a>.</p>
         <p>Includes <a href="//jquery.com" class="underline">jQuery</a> 2.2.1.</p>
         <p>Feel free to use it, available at <a href="//github.com/tornroth/ip" class="underline">GitHub</a>.</p>
       </div>
     </div>
 
-    <footer>
-      &copy; 2017 <a href="//vettig.se">Marcus Törnroth</a> | <span class="toggleAbout">About</span>
-    </footer>
-
+    <script src="js/script.js"></script>
   </body>
 </html>
