Updated service provider

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       <div class="content">
         <div class="close toggle-about">&times;</div>
         <p class="header">IP Address</p>
-        <p>This is a service based on <a href="//ipinfo.io" class="underline">ipinfo.io</a>.</p>
+        <p>This is a service based on <a href="//geoiplookup.io" class="underline">geoiplookup.io</a>.</p>
         <p>Feel free to use it, available at <a href="//github.com/tornroth/ip" class="underline">GitHub</a>.</p>
       </div>
     </div>
