--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <div class="bottom">
       <div>
-        &copy; 2017 <a href="//github.com/tornroth/ip">Marcus Törnroth</a> | <span class="link toggle-about">About</span>
+        &copy; 2015-2019 <a href="//github.com/tornroth/ip">Marcus Törnroth</a> | <span class="link toggle-about">About</span>
       </div>
     </div>
 
