--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>IP Address</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
 
@@ -33,6 +33,6 @@
       </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
