--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>IP Address</title>
@@ -12,26 +12,18 @@
       <div class="ip"></div>
     </div>
 
-    <div class="center">
+    <div class="bottom">
       <div class="location"></div>
       <div class="network"></div>
       <div class="hostname"></div>
     </div>
 
-    <div class="bottom">
-      <div>
-        &copy; 2015-2019 <a href="//github.com/tornroth/ip">Marcus Törnroth</a> | <span class="link toggle-about">About</span>
-      </div>
-    </div>
-
-    <div class="about hidden">
-      <div class="content">
-        <div class="close toggle-about">&times;</div>
-        <p class="header">IP Address</p>
-        <p>This is a service based on <a href="//geoiplookup.io" class="underline">geoiplookup.io</a>.</p>
-        <p>Feel free to use it, available at <a href="//github.com/tornroth/ip" class="underline">GitHub</a>.</p>
-      </div>
-    </div>
+    <footer>
+      <ul>
+        <li>&copy;2015-2021 Vettig</li>
+        <li><a href="https://github.com/vettig/ip">GitHub</a></li>
+      </ul>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
