Change top/bottom from class to id

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
 
-    <div class="top">
+    <div id="top">
       <div class="ip"></div>
     </div>
 
-    <div class="bottom">
+    <div id="bottom">
       <div class="location"></div>
       <div class="network"></div>
       <div class="hostname"></div>
