--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,8 @@
   </head>
   <body>
 
-    <div id="top">
-      <div class="ip"></div>
-    </div>
-
-    <div id="bottom">
-      <div class="location"></div>
-      <div class="network"></div>
-      <div class="hostname"></div>
-    </div>
+    <div id="top"></div>
+    <div id="bottom"></div>
 
     <footer>
       <ul>
