--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
 
-    <div id="top"></div>
-    <div id="bottom"></div>
+    <header id="top"></header>
+
+    <section id="bottom"></section>
 
     <footer>
       <ul>
