Let script use tagnames

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
 
-    <header id="top"></header>
-
-    <section id="bottom"></section>
+    <header></header>
+    <section></section>
 
     <footer>
       <ul>
