--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 
     <footer>
       <ul>
-        <li>&copy;2015-2021 Vettig</li>
-        <li><a href="https://github.com/vettig/ip">GitHub</a></li>
+        <li>&copy;2015-2022 Marcus Törnroth</li>
+        <li><a href="https://github.com/tornroth/ip">GitHub</a></li>
       </ul>
     </footer>
 
